nav z-index fix

--- a/css-ui.css
+++ b/css-ui.css
@@ -1,4 +1,4 @@
-/* {"name":"css-ui","version":"2.0.2","author":"Lcf.vs <michael.rouges@gmail.com>","license":"MIT"} */
+/* {"name":"css-ui","version":"2.0.3","author":"Lcf.vs <michael.rouges@gmail.com>","license":"MIT"} */
 :after, :before, a, abbr, acronym, address, article, aside, audio, b, big, blockquote, body, button, canvas, caption, cite, code, dd, del, details, dfn, div, dl, dt, em, embed, fieldset, figcaption, figure, footer, form, h1, h2, h3, h4, h5, h6, header, hr, html, i, iframe, img, ins, kbd, label, legend, li, main, mark, menu, nav, object, ol, output, p, pre, progress, q, rt, ruby, s, samp, section, small, span, strike, strong, sub, summary, sup, table, tbody, td, tfoot, th, thead, time, tr, u, ul, var, video {
     font: inherit;
     font-size: 1em;
@@ -54,7 +54,8 @@ body > header > h1 {
 
 body > nav {
     bottom: 0;
-    margin-top: 3em
+    margin-top: 3em;
+    z-index: 1
 }
 
 body > nav > [tabindex="1"], body > nav > [tabindex="-1"] {
